--- a/database/src/test/resources/europeana-test.properties
+++ b/database/src/test/resources/europeana-test.properties
@@ -78,7 +78,7 @@ template.path = WEB-INF/templates/
 # other
 #
 #cacheUrl = http://dashboard.europeana.sara.nl/cache/image/?
-cacheUrl = http://localhost:8983/cache/image/?
+cacheUrl = http://localhost:8983/api/image/?
 
 
 #
