--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,10 +4,17 @@
     <groupId>eu.europeana</groupId>
     <artifactId>api</artifactId>
     <packaging>war</packaging>
-    <name>Provide APIs for Cache, Resolving, etc</name>
+    <name>Provide APIs for Cache, Resolving, WebSearch, etc</name>
     <version>${europeana.api.version}</version>
     <description>Servlet</description>
     <inceptionYear>2008</inceptionYear>
+
+     <build>
+        <defaultGoal>package</defaultGoal>
+        <finalName>api</finalName>
+        <plugins>
+        </plugins>
+    </build>
 
     <parent>
         <groupId>eu.europeana</groupId>
