#469 next iteration of RequestLogger. Now works with LocaleChangeInterceptor
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@518 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -261,6 +261,9 @@
             <artifactId>srw_lucene</artifactId>
             <!--suppress MavenModelInspection -->
         </dependency>
-
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 </project>
