--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,11 @@
                 <artifactId>mail</artifactId>
                 <version>1.4</version>
             </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>1.6</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.lucene</groupId>
