--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,17 @@
             <name>EBR External Release Repository</name>
             <url>http://repository.springsource.com/maven/bundles/external</url>
         </repository>
-
+        <repository>
+            <id>JBOSS</id>
+            <name>JBoss Repository</name>
+            <url>http://repository.jboss.org/maven2/</url>
+            <releases>
+	            <enabled>true</enabled>
+	        </releases>
+	        <snapshots>
+	            <enabled>false</enabled>
+	        </snapshots>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -218,6 +228,11 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-annotations</artifactId>
                 <version>${hibernate.annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>4.0.2.GA</version>
             </dependency>
 
             <!-- Spring -->
@@ -381,6 +396,7 @@
                 <artifactId>srw_lucene</artifactId>
                 <version>1.0</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
     <properties>
