#469 move to Spring Framework 3.0.0.RC3 from old 3.0.0.M3
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@540 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -386,7 +386,7 @@
 
         <jdkLevel>1.6</jdkLevel>
 
-        <spring.version>3.0.0.M3</spring.version>
+        <spring.version>3.0.0.RC3</spring.version>
         <spring.security.version>2.0.3</spring.security.version>
 
         <hibernate.version>3.2.7.ga</hibernate.version>
