#469 spring-mvc 3 annotated controller for registration works, existing validator used
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@547 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <module>api</module>
         <module>bootstrap</module>
         <module>portal-lite</module>
+        <module>portal-full</module>
     </modules>
     <organization>
         <name>Europeana Foundation</name>
