--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -78,6 +78,10 @@
             <artifactId>jawr</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
             <scope>test</scope>
