--- a/pom.xml
+++ b/pom.xml
@@ -78,12 +78,12 @@
 
     <modules>
         <module>database</module>
-        <module>normalizer</module>
-        <module>dashboard</module>
         <module>api</module>
         <module>bootstrap</module>
         <module>portal-lite</module>
         <module>portal-full</module>
+        <module>dashboard</module>        
+        <module>sip-creator</module>
     </modules>
     <organization>
         <name>Europeana Foundation</name>
@@ -381,7 +381,7 @@
     <properties>
         <europeana.database.version>1.0.1</europeana.database.version>
         <europeana.bootstrap.version>0.5</europeana.bootstrap.version>
-        <europeana.normalizer.version>2.8</europeana.normalizer.version>
+        <europeana.sip-creator.version>2.8</europeana.sip-creator.version>
         <europeana.portal.version>0.6</europeana.portal.version>
         <europeana.api.version>0.1</europeana.api.version>
 
