--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,9 @@
     <modules>
         <module>database</module>
         <module>api</module>
-        <module>bootstrap</module>
         <module>portal-lite</module>
         <module>portal-full</module>
-        <module>dashboard</module>        
+        <module>dashboard</module>
         <module>sip-creator</module>
     </modules>
     <organization>
@@ -284,12 +283,12 @@
             <dependency>
                 <groupId>org.freemarker</groupId>
                 <artifactId>freemarker</artifactId>
-                <version>2.3.14</version>
+                <version>2.3.16</version>
             </dependency>
             <dependency>
                 <groupId>net.jawr</groupId>
                 <artifactId>jawr</artifactId>
-                <version>2.8</version>
+                <version>3.2</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
@@ -380,14 +379,13 @@
     </dependencyManagement>
     <properties>
         <europeana.database.version>1.0.1</europeana.database.version>
-        <europeana.bootstrap.version>0.5</europeana.bootstrap.version>
         <europeana.sip-creator.version>2.8</europeana.sip-creator.version>
         <europeana.portal.version>0.6</europeana.portal.version>
         <europeana.api.version>0.1</europeana.api.version>
 
         <jdkLevel>1.6</jdkLevel>
 
-        <spring.version>3.0.0.RC3</spring.version>
+        <spring.version>3.0.0.RELEASE</spring.version>
         <spring.security.version>2.0.3</spring.security.version>
 
         <hibernate.version>3.2.7.ga</hibernate.version>
