--- a/database/pom.xml
+++ b/database/pom.xml
@@ -230,6 +230,10 @@
             <artifactId>commons-httpclient</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
             <scope>test</scope>
