cache url updated
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@581 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -78,13 +78,12 @@ template.path = WEB-INF/templates/
 # other
 #
 #cacheUrl = http://dashboard.europeana.sara.nl/cache/image/?
-cacheUrl = http://localhost:8983/cache/image/?
-
+cacheUrl = http://localhost:8983/api/image/?
 
 #
 # Resolver Servlet
 #
-resolverUrlPrefix  = http://localhost:8983
+resolverUrlPrefix  = http://localhost:8983/api/resolve
 displayPageUrl     = http://localhost:8983/portal/full-doc.html
 
 #
