#469 added solrj dependency and basic solrJ query and bean classes
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@586 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -269,6 +269,10 @@
             <artifactId>srw_lucene</artifactId>
             <!--suppress MavenModelInspection -->
         </dependency>
+         <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+        </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
