--- a/pom.xml
+++ b/pom.xml
@@ -367,12 +367,17 @@
             <dependency>
                 <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-core</artifactId>
-                <version>2.3.2</version>
+                <version>2.9.1</version>
             </dependency>
             <dependency>
                 <groupId>org.osuosl.srw</groupId>
                 <artifactId>srw_lucene</artifactId>
                 <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.solr</groupId>
+                <artifactId>solr-solrj</artifactId>
+                <version>1.4.0</version>
             </dependency>
 
         </dependencies>
