--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
                 <artifactId>commons-fileupload</artifactId>
                 <version>1.2.1</version>
             </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.4</version>
+            </dependency>
 
             <!-- containers -->
             <dependency>
