--- a/database/src/test/resources/europeana-test.properties
+++ b/database/src/test/resources/europeana-test.properties
@@ -30,8 +30,7 @@ db.password    =
 
 #
 # solr connection settings
-solr.updateUrl = http://localhost:8983/solr/update
-solr.selectUrl = http://localhost:8983/solr/select
+solr.baseUrl = http://localhost:8983/solr
 solr.chunkSize = 1000
 
 #
