#545 briefdoc Working again. Full doc still broken
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@643 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/dashboard/src/main/webapp/WEB-INF/web.xml
+++ b/dashboard/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,15 @@
         <url-pattern>/eu.europeana.dashboard.EuropeanaDashboard/uploadSandbox</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>dashboardServiceStub</servlet-name>
+        <servlet-class>eu.europeana.dashboard.server.DashboardServiceStub</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>dashboardServiceStub</servlet-name>
+        <url-pattern>/eu.europeana.dashboard.EuropeanaDashboard/DashboardService.rpc</url-pattern>
+    </servlet-mapping>
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
