--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -39,15 +39,14 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-<!-- 
-            <plugin>
+<!--            <plugin>
                 <groupId>com.totsp.gwt</groupId>
                 <artifactId>maven-googlewebtoolkit2-plugin</artifactId>
                 <version>2.0-beta26</version>
                 <executions>
                     <execution>
                         <goals>
-                            <!- -<goal>mergewebxml</goal>- ->
+                            &lt;!&ndash;<goal>mergewebxml</goal>&ndash;&gt;
                             <goal>compile</goal>
                             <goal>test</goal>
                         </goals>
@@ -98,8 +97,7 @@
                     <warSourceExcludes>.gwt-tmp/**</warSourceExcludes>
                     <!- -<webXml>target/web.xml</webXml>- ->
                 </configuration>
-            </plugin> 
-     -->
+            </plugin>-->
         </plugins>
     </build>
     <dependencies>
@@ -133,6 +131,10 @@
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
@@ -205,6 +207,6 @@
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
             <scope>test</scope>
-        </dependency>        
+        </dependency>
     </dependencies>
 </project>
