--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -30,8 +30,7 @@ db.password    = culture
 
 #
 # solr connection settings
-solr.updateUrl = http://localhost:8983/solr/update
-solr.selectUrl = http://localhost:8983/solr/
+solr.baseUrl = http://localhost:8983/solr
 solr.chunkSize = 1000
 
 #
