#545 updated old reference to the database module to core. Moved annotated controllers to controllers package and deleted annotated directory
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@658 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,7 @@
 
       <!-- copy selected modules -->
       <copy todir="${ostmp}">
-          <fileset dir="." includes="database/**" excludes="${excludePattern}" />
+          <fileset dir="." includes="core/**" excludes="${excludePattern}" />
           <fileset dir="." includes="portal-lite/**" excludes="${excludePattern}" />
           <fileset dir="." includes="api/**" excludes="${excludePattern}" />
           <fileset file="pom.opensource.xml"/>
