--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -43,7 +43,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>1.2-SNAPSHOT</version>
+                <version>1.2</version>
                 <executions>
                     <execution>
                         <goals>
