EuropeanaProperties class modified to fail immediately using System.exit(1) rather than throw exceptions exec-maven-plugin in portal-lite and portal-full, run everything with "mvn exec:java"
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@741 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -64,6 +64,22 @@
         <defaultGoal>package</defaultGoal>
         <finalName>portal</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>eu.europeana.PortalLite</mainClass>
+                    <classpathScope>test</classpathScope>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
