--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -38,7 +38,6 @@
     </organization>
     <build>
         <finalName>${project.artifactId}</finalName>
-        <outputDirectory>war/WEB-INF/classes</outputDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -55,8 +54,7 @@
                 </executions>
                 <configuration>
                     <module>eu.europeana.dashboard.EuropeanaDashboard</module>
-                    <runTarget>eu.europeana.dashboard.EuropeanaDashboard/EuropeanaDashboard.html
-                    </runTarget>
+                    <runTarget>eu.europeana.dashboard.EuropeanaDashboard/EuropeanaDashboard.html</runTarget>
                 </configuration>
             </plugin>
             <!--
@@ -77,8 +75,15 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <warSourceDirectory>war</warSourceDirectory>
                     <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                    <webResources>
+                         <resource>
+                            <directory>src/main/webapp/WEB-INF</directory>
+                            <excludes>
+                                <exclude>**/web.xml</exclude>
+                            </excludes>
+                         </resource>
+                    </webResources>             
                 </configuration>
             </plugin>
             <plugin>
