--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
+            <version>1.2.15</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
@@ -408,7 +408,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <gwtVersion>2.0.0</gwtVersion>
-        <google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>
+        <!--<google.webtoolkit.home>${env.GWT_HOME}</google.webtoolkit.home>-->
 
     </properties>
 </project>
