#752 Some rearrangement: BackendStarter now resides in api module, since it requires api's classpath LoadContent (a verb) now ContentLoader (a noun) SolrStarter uses port 8983 PortalLite deprecated (use PortalLiteStarter after BackendStarter) PortalFull removed (use PortalFullStarter after BackendStarter) BackendStarter from command line in api module:  mvn exec:java PortalLiteStarter from command line in portal-lite module: mvn exec:java PortalFullStarter from command line in portal-full module: mvn exec:java
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@768 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -76,7 +76,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>eu.europeana.PortalLite</mainClass>
+                    <mainClass>eu.europeana.PortalLiteStarter</mainClass>
                     <classpathScope>test</classpathScope>
                 </configuration>
             </plugin>
