#545 Added yui-compressor maven plugin to portal-lite and portal-full, included Google Analytics snippet in footer of portal-full.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@770 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -121,7 +121,24 @@
                     <excludePackageNames>*.migration.*, *.json.*, *.integration.*, *.dao.*</excludePackageNames>
                 </configuration>
             </plugin>
-
+            <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <configuration>
+                <appendAssemblyId>true</appendAssemblyId>
+                <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>make-assembly</id>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>assembly</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -264,11 +281,11 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.osuosl.srw</groupId>
-            <artifactId>srw_lucene</artifactId>
-            <!--suppress MavenModelInspection -->
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.osuosl.srw</groupId>-->
+            <!--<artifactId>srw_lucene</artifactId>-->
+            <!--&lt;!&ndash;suppress MavenModelInspection &ndash;&gt;-->
+        <!--</dependency>-->
          <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
