#545 PortalFullStarter must remain in portal full module to avoid classPath problems.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@813 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -86,7 +86,7 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>jslint</goal>
+                            <!--<goal>jslint</goal>-->
                             <goal>compress</goal>
                         </goals>
                     </execution>
