dependencies not necessary for trunk, and otherwise the dependencies should be elsewhere in SVN
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@818 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <module>portal-lite</module>
         <module>dashboard</module>
         <module>sip-creator</module>
+        <module>portal-full</module>
     </modules>
     <organization>
         <name>Europeana Foundation</name>
