#609 added StaticPagePath to EuropeanaProperties, renamed pageId 'bd' to 'brd' and removed some stray includes
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@820 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -93,6 +93,11 @@ cache.cacheRoot=/tmp/europeana-cache
 debug = false
 
 #
+# Where the static pages can be found
+#
+static.page.path = portal-full/src/test/staticpages/
+
+#
 # Where to get messages from:  database or bundle
 #
 message.source = database
