--- a/core/src/test/resources/europeana-test.properties
+++ b/core/src/test/resources/europeana-test.properties
@@ -89,10 +89,13 @@ cache.cacheRoot=/tmp/europeana-cache
 debug = false
 
 #
-# Where to get messages from:  database or bundle
+# Where to get messages from and how frequently the cache is flushed
 #
-message.source = database
-# where to get static pages from: database or include
-message.static_pages = database
-# Where to get the content of the partner page from: database or include
-message.network = database
+message.resource=portal-lite/src/main/message_keys/messages
+message.cache.seconds=60
+
+#
+# Where on the file system to find the static pages
+#
+static.page.path = portal-full/src/test/staticpages/
+
