--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -87,10 +87,7 @@ debug = false
 static.page.path = portal-full/src/test/staticpages/
 
 #
-# Where to get messages from:  database or bundle
+# Where to get messages from and how frequently the cache is flushed
 #
-message.source = database
-# where to get static pages from: database or include
-message.static_pages = database
-# Where to get the content of the partner page from: database or include
-message.network = database
+message.resource=portal-lite/src/main/message_keys/messages
+message.cache.seconds=60
