--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -89,5 +89,5 @@ static.page.path = portal-full/src/test/staticpages/
 #
 # Where to get messages from and how frequently the cache is flushed
 #
-message.resource=portal-lite/src/main/message_keys/messages
+message.resource=file:portal-lite/src/main/message_keys/messages
 message.cache.seconds=60
