#545 update the yuicompressor plugin to gzip minified js/css files and to no longer output javascript warnings.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@834 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -93,6 +93,8 @@
                 </executions>
                 <configuration>
                     <nosuffix>true</nosuffix>
+                    <gzip>true</gzip>
+                    <jswarn>false</jswarn>
                 </configuration>
             </plugin>
         </plugins>
@@ -104,12 +106,6 @@
             <artifactId>core</artifactId>
             <version>${europeana.core.version}</version>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>net.jawr</groupId>
-            <artifactId>jawr</artifactId>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
