No ticket associated, but I discovered that our spring namespaces were due for upgrade
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@851 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -173,6 +173,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
         <dependency>
@@ -241,10 +245,6 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
