--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <module>core</module>
         <module>api</module>
         <module>portal-lite</module>
+        <module>portal-full</module>
         <module>dashboard</module>
         <module>sip-creator</module>
     </modules>
@@ -399,7 +400,7 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <europeana.core.version>1.0.4</europeana.core.version>
+        <europeana.core.version>1.0.5</europeana.core.version>
         <europeana.sip-creator.version>2.8</europeana.sip-creator.version>
         <europeana.portal.version>0.5</europeana.portal.version>
         <europeana.api.version>0.1</europeana.api.version>
@@ -407,7 +408,7 @@
         <jdkLevel>1.6</jdkLevel>
 
         <spring.version>3.0.0.RELEASE</spring.version>
-        <spring.security.version>3.0.1.RELEASE</spring.security.version>
+        <spring.security.version>3.0.0.RELEASE</spring.security.version>
 
         <hibernate.version>3.2.7.ga</hibernate.version>
         <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
