--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,70 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
-    </repositories>
+        <!-- Repositories from Artifactory, to be activated if the above Artifactory is broken, ticket #393 -->
+        <repository>
+            <id>repo1</id>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
+            <id>aduna</id>
+            <name>Sesame</name>
+            <url>http://repo.aduna-software.org/maven2/releases</url>
+        </repository>
+        <repository>
+            <id>jboss</id>
+            <name>JBoss Repository (initially with include pattern org/jboss/**,org/richfaces/**)</name>
+            <url>http://repository.jboss.com/maven2</url>
+        </repository>
+        <repository>
+            <id>ibiblio</id>
+            <url>http://mirrors.ibiblio.org/pub/mirrors/maven2/</url>
+        </repository>
+        <repository>
+            <id>codehaus</id>
+            <url>http://repository.codehaus.org</url>
+        </repository>
+        <repository>
+            <id>jetty</id>
+            <url>http://oss.sonatype.org/content/groups/jetty/</url>
+        </repository>
+        <repository>
+            <id>java.net.m1</id>
+            <name>java.net Maven1 Format</name>
+            <url>http://download.java.net/maven/1</url>
+        </repository>
+        <repository>
+            <id>spring-releases</id>
+            <name>EBR Spring Release Repository</name>
+            <url>http://repository.springsource.com/maven/bundles/release</url>
+        </repository>
+        <repository>
+            <id>gwt</id>
+            <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo</url>
+        </repository>
+        <repository>
+            <id>java.net.m2</id>
+            <name>java.net Maven2 Format</name>
+            <url>http://download.java.net/maven/2</url>
+        </repository>
+        <repository>
+            <id>tel-project</id>
+            <url>http://dev.theeuropeanlibrary.org/dev/maven_rep</url>
+        </repository>
+        <repository>
+            <id>atlassian</id>
+            <url>http://repository.atlassian.com/</url>
+        </repository>
+        <repository>
+            <id>codehaus-snapshots</id>
+            <url>http://snapshots.repository.codehaus.org/</url>
+        </repository>
+        <repository>
+            <id>spring-external</id>
+            <name>EBR External Release Repository</name>
+            <url>http://repository.springsource.com/maven/bundles/external</url>
+        </repository>
+     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
