--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -119,5 +119,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
       </dependencies>
 </project>
