--- a/portal-full/src/main/webapp/WEB-INF/web.xml
+++ b/portal-full/src/main/webapp/WEB-INF/web.xml
@@ -136,8 +136,8 @@
         <location>/error.html</location>
     </error-page>
     <error-page>
-        <exception-type>org.springframework.security.ui.rememberme.CookieTheftException</exception-type>
+        <exception-type>org.springframework.security.web.authentication.rememberme.CookieTheftException</exception-type>
         <location>/remember-me-theft.html</location>
     </error-page>
-   
+
 </web-app>
