#699 poms to enable project reports on integration tests
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1013 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -100,16 +100,21 @@
         </plugins>
     </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty</artifactId>
-            <scope>test</scope>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>eu.europeana</groupId>
+			<artifactId>core</artifactId>
+			<version>${europeana.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<scope>test</scope>
+		</dependency>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jsp-2.1</artifactId>
