--- a/pom.xml
+++ b/pom.xml
@@ -494,7 +494,11 @@
                 <artifactId>solr-solrj</artifactId>
                 <version>1.4.0</version>
             </dependency>
-
+            <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.2</version>
+        </dependency>
         </dependencies>
     </dependencyManagement>
     <properties>
