Hudson build failing due to "Missing property log4j.xml"
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1288 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/core/src/test/resources/europeana-test.properties
+++ b/core/src/test/resources/europeana-test.properties
@@ -101,3 +101,7 @@ message.cache.seconds=60
 #
 static.page.path = portal-full/src/test/staticpages/
 
+#
+# Where is the log4j.xml
+#
+log4j.xml=classpath:/log4j.xml
