--- a/core/src/test/resources/europeana-test.properties
+++ b/core/src/test/resources/europeana-test.properties
@@ -30,7 +30,8 @@ db.password    =
 
 #
 # solr connection settings
-solr.baseUrl = http://localhost:8983/solr
+solr.selectUrl = http://localhost:8983/solr
+solr.updateUrl = http://localhost:8983/solr
 solr.chunkSize = 1000
 solr.timeout = 60000
 solr.retries = 1
