--- a/europeana.properties.template
+++ b/europeana.properties.template
@@ -30,7 +30,7 @@ db.password    = culture
 
 #
 # solr connection settings
-solr.baseUrl = http://localhost:8983/solr
+#solr.baseUrl = http://localhost:8983/solr
 solr.selectUrl = http://localhost:8983/solr
 solr.updateUrl = http://localhost:8983/solr
 solr.chunkSize = 1000
