--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             <name>EBR External Release Repository</name>
             <url>http://repository.springsource.com/maven/bundles/external</url>
         </repository>
-     </repositories>
+    </repositories>
 
     <pluginRepositories>
         <pluginRepository>
@@ -494,11 +494,11 @@
                 <artifactId>solr-solrj</artifactId>
                 <version>1.4.0</version>
             </dependency>
-            <dependency>
-            <groupId>asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>3.2</version>
-        </dependency>
+            <!--<dependency>-->
+                <!--<groupId>asm</groupId>-->
+                <!--<artifactId>asm</artifactId>-->
+                <!--<version>3.2</version>-->
+            <!--</dependency>-->
         </dependencies>
     </dependencyManagement>
     <properties>
