--- a/sip-creator/pom.xml
+++ b/sip-creator/pom.xml
@@ -69,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy</artifactId>
+            <artifactId>groovy-all</artifactId>
             <version>1.7.1</version>
         </dependency>
         <dependency>
