--- a/portal-full/pom.xml
+++ b/portal-full/pom.xml
@@ -108,7 +108,44 @@
                     <jswarn>false</jswarn>
                 </configuration>
             </plugin>
-
+           <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.0-beta-4</version>
+                <configuration>
+                    <providerImplementations>
+                        <svn>javasvn</svn>
+                    </providerImplementations>
+                    <timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>        
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>validate</phase>
+                        <configuration>
+                            <tasks>
+                                <echo message="Writing Revision ${buildNumber} built at ${timestamp} to build.txt"/>
+                                <echo message="Revision ${buildNumber} built at ${timestamp}" file="src/main/webapp/build.txt" />
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
