#987 definitions module created, initially containing Country and Language, upon which core now depends.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1362 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -121,6 +121,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>eu.europeana</groupId>
+            <artifactId>definitions</artifactId>
+            <version>${europeana.definitions.version}</version>
+        </dependency>
+        <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
