--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
     </pluginRepositories>
 
     <modules>
+        <module>definitions</module>
         <module>core</module>
         <module>api</module>
         <module>portal-lite</module>
@@ -506,7 +507,8 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <europeana.core.version>1.18</europeana.core.version>
+        <europeana.definitions.version>1.00</europeana.definitions.version>
+        <europeana.core.version>1.19</europeana.core.version>
         <europeana.sip-creator.version>2.8</europeana.sip-creator.version>
         <europeana.portal.version>0.6</europeana.portal.version>
         <europeana.api.version>0.1</europeana.api.version>
