#987 documentation and built script updated to reflect creation of the definitions module.
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1364 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
 
       <!-- copy selected modules -->
       <copy todir="${ostmp}">
+          <fileset dir="." includes="definitions/**" excludes="${excludePattern}" />
           <fileset dir="." includes="core/**" excludes="${excludePattern}" />
           <fileset dir="." includes="portal-lite/**" excludes="${excludePattern}" />
           <fileset dir="." includes="api/**" excludes="${excludePattern}" />
