--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -80,9 +80,9 @@
 				<version>2.5</version>
 				<dependencies>
 					<dependency>
-						<groupId>com.example.whizbang</groupId>
-						<artifactId>build-tools</artifactId>
-						<version>1.0</version>
+						<groupId>eu.europeana</groupId>
+						<artifactId>core</artifactId>
+						<version>${europeana.core.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
