#1013, checkstyle for all
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@1384 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -84,6 +84,36 @@
 						<artifactId>core</artifactId>
 						<version>${europeana.core.version}</version>
 					</dependency>
+                    <dependency>
+                        <groupId>eu.europeana</groupId>
+                        <artifactId>definitions</artifactId>
+                        <version>${europeana.definitions.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>eu.europeana</groupId>
+                        <artifactId>portal-full</artifactId>
+                        <version>${europeana.portal.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>eu.europeana</groupId>
+                        <artifactId>portal-lite</artifactId>
+                        <version>${europeana.portal.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>eu.europeana</groupId>
+                        <artifactId>api</artifactId>
+                        <version>${europeana.api.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>eu.europeana</groupId>
+                        <artifactId>sip-creator</artifactId>
+                        <version>${europeana.sip-creator.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>eu.europeana</groupId>
+                        <artifactId>dashboard</artifactId>
+                        <version>${europeana.dashboard.version}</version>
+                    </dependency>
 				</dependencies>
 			</plugin>
 
